# flair

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
flair/: __init__.py  __main__.py  cli.py  config.py  memory.py  session_log.py  session_store.py
flair/agents/: __init__.py  coding.py  explorer.py  general.py
flair/core/: __init__.py  agent.py  prune.py  router.py  tool.py
flair/llm/: __init__.py  base.py  deepseek.py  factory.py  openai.py
flair/prompts/: __init__.py  coding.md  explorer.md  general.md
flair/tools/: __init__.py  coding.py  fs.py  memory.py  plan.py  repomap.py  shell.py  subagent.py  system.py  web.py
tests/: test_smoke.py
tests/evals/: run_evals.py  tasks.py
